# fenv

./: Cargo.toml  README.md  fenv.fish  init.fish
examples/: .envrc.fish
examples/test/: .envrc.fish
examples/test/foo/: .envrc.fish
src/: main.rs
