[package]
name = "seokmin_fenv"
version = "0.2.1"
edition = "2024"
authors = ["Seokmin Hong <ghdtjrald240@gmail.com>"]
description = "A direnv-like tool for Fish shell"
license = "MIT"
readme = "README.md"
repository = "https://github.com/SeokminHong/fenv"

[[bin]]
name = "fenv"
path = "src/main.rs"
description = "A direnv-like tool for Fish shell"
test = false
doc = false

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
